# interferogram

./: .dockerignore  .gitignore  Dockerfile  README.md  README.zh-CN.md  docker-compose.portainer.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
docs/: combined_fft_display_results.md  docker_portainer_deployment.md  initial_prototype_status.md  package_api.md  project_requirements.md  second_pass_active_aperture_status.md  technical_design.md  test_image_intake.md  validation_protocol.md  windows_run_guide.md  zygo_ocr_results.md
examples/: raw_fringe_curl.sh  zygo_screenshot_curl.sh
scripts/windows/: run_raw_fringe_example.ps1  run_zygo_screenshot_example.ps1  setup_windows.ps1  start_api.bat  start_api.ps1
src/: __init__.py  analyze_display_wavefront.py  combine_results.py  compare_active_to_zygo.py  compare_improved_fft.py  compare_to_zygo.py  extract_active_apertures.py  extract_wavefront_maps.py  run_active_analysis.py  run_fft_sweep.py  run_initial_analysis.py
src/iflat/: __init__.py  __main__.py  api.py  display_wavefront.py  fourier_phase.py  mask_utils.py  metrics.py  raw_fringe.py
