[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interferogram-flatness"
version = "0.1.0"
description = "Rectangular interferogram flatness analysis package and API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "scikit-image",
  "opencv-python-headless",
  "matplotlib",
  "pandas",
  "pillow",
  "fastapi",
  "uvicorn",
  "jinja2",
  "python-multipart",
]

[project.scripts]
iflat = "iflat.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["iflat*"]
